--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -169,3 +169,12 @@ button.btn {
     flex-direction: column;
   }
 }
+
+a.git-hub {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
